--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,9 @@ aside{
   display: flex;
   flex-wrap: wrap;
   padding-top: 50px;
+  align-content: center;
 }
 aside img{
-  width:100px;
-  height: 100px;
+  width:150px;
+  height: 150px;
 }
