--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,8 @@ aside{
   display: flex;
   flex-wrap: wrap;
   padding-top: 50px;
-  align-content: center;
+  align-content: space-around;
+  justify-content: space-around;
 }
 aside img{
   width:150px;
