--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,13 @@ body{
   background-image: url("../image/num.jpg");
   background-size: contain;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 30vh;
+  margin-bottom: 5vh;
+}
+@media only screen and (min-width: 1000px){
+  #bandeau{
+    height: 300px;
+  }
 }
 #header{
   text-align:center;
@@ -130,7 +136,7 @@ footer{
   font-size: 1em;
 }
 #num{
-  width:30%;
+  width:25%;
   float: right;
   margin-top: 50px;
 }
@@ -149,6 +155,14 @@ main section{
 @media only screen and (max-width:600px){
   main section{
     display: block;
+  }
+  #bandeau{
+    height: 20vh;
+    background-size: 100% 100%;
+  }
+  #num{
+    margin-right: 10%;
+    margin-top: 20px;
   }
 }
 
