--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ nav ul {
 nav ul li a span, nav ul li a{
   color: white;
 }
-nav ul li a span:hover, nav ul li a:hover{
+nav ul li a:hover span, nav ul li a:hover{
   color:red;
 } 
 @media only screen and (max-width:600px){
