--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
 @media only screen and (min-width: 1000px){
   #bandeau{
     height: 300px;
+    background-size: 100% 100%;
   }
 }
 #header{
@@ -158,8 +159,8 @@ main section{
     display: block;
   }
   #bandeau{
-    height: 20vh;
     background-size: 100% 100%;
+    height: 150px;
   }
   #num{
     margin-right: 10%;
@@ -196,9 +197,9 @@ footer p a:hover{
 #form h2:nth-child(1){
   color:red;
 }
-#form h2:nth-child(4){
+#form h2:nth-child(5){
   color:green;
 }
-#form h2:nth-child(11){
+#form h2:nth-child(12){
   color:black;
 }
