--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ nav ul li a:hover span, nav ul li a:hover{
     to { left : 40% ; }
 }
 main span{
-  color:dimgrey;
+  color:maroon;
   width:30%;
   text-align: center;
 }
@@ -114,15 +114,22 @@ main{
   background-color:#322E3F;
   margin-top: 50px;
   position: relative;
-  padding-left: 50px;
+  z-index:-3;
+  overflow: hidden;
 }
-
+main video{
+  /*width: 100%;
+  height: 500px;*/
+}
 #maphoto{
+  position: absolute;
   max-width:500px;
-  width:40%;
+  /*width:40%;*/
   max-height:300px;
-  margin-top: 25px;
+  top: 25px;
+  left: 50px;
   border-radius: 50%;
+  
 }
 footer{
   text-align:center;
@@ -138,11 +145,17 @@ footer{
   font-size: 1em;
 }
 #num{
-  width:25%;
+  position: absolute;
+  /*width:25%;*/
+  max-height: 200px;
   float: right;
-  margin-top: 50px;
+  top: 50px;
+  right: 50px;
 }
 #form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 50px;
   text-align: center;
   width:60%;
@@ -153,8 +166,12 @@ footer{
 }
 main section{
   display: flex;
+  position: absolute;
+  top:350px;
+  width:100%;
+  justify-content: center;
 }
-@media only screen and (max-width:600px){
+@media only screen and (max-width:700px){
   main section{
     display: block;
   }
@@ -163,23 +180,43 @@ main section{
     height: 150px;
   }
   #num{
+    max-width: 100px;
     margin-right: 10%;
     margin-top: 20px;
+    position: static;
+  }
+  #maphoto{
+    max-height:150px;
+    position: static;
+  }
+
+  video{
+    display: none;
+
+  }
+  main section{
+    position: static;
   }
 }
 
 aside{
+  text-align: center;
   margin-bottom: 50px;
   margin-left: 50px;
   margin-right: 50px;
-  display: flex;
-  flex-wrap: wrap;
   padding-top: 50px;
-  align-content: space-around;
-  justify-content: space-around;
   background-color: #C8BCD8;
   max-width: 600px;
   transform: rotate(3deg);
+}
+aside h2{
+  color: black;
+}
+aside div{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-around;
+  justify-content: space-around;
 }
 aside img{
   width:150px;
