--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
   background-image: url("../image/num.jpg");
   background-size: contain;
   background-repeat: no-repeat;
-  height: 30vh;
+  height: 300px;
   margin-bottom: 5vh;
 }
 @media only screen and (min-width: 1000px){
